# parallelization

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust_ci.yml
cpp/: CMakeLists.txt
cpp/dot_product/include/: cuda_util.h
cpp/dot_product/src/: cuda_kernels.cu  cuda_operations.cu  cuda_operatons.cu  main.cpp
cpp/dot_product_cosine_for_loop/: CMakeLists.txt  README.md
cpp/dot_product_cosine_for_loop/include/: common.h  cuda_util.h
cpp/dot_product_cosine_for_loop/src/: cuda_kernels.cu  cuda_operations.cu  main.cpp  utilities.cpp
cpp/dot_product_cosine_for_loop/test/src/: test_cuda_kernels.cu
cpp/dot_product_cosine_parallel/include/: common.h
cpp/dot_product_cosine_parallel/src/: cuda_kernels.cu
cpp/include/: cuda_util.h
cpp/sequential_dot/: CMakeLists.txt
cpp/sequential_dot/include/: common.h
cpp/sequential_dot/src/: main.cpp  operations.cpp  utilities.cpp
cpp/src/: main.cpp  utilities.cpp
cpp/test/data/: 1000img_1000_filters.csv
cpp/test/src/: test_cuda_kernels.cu
cpu_test/: Cargo.toml
cpu_test/files/: filters.csv
cpu_test/files/python_dot/: dotproduct.py
cpu_test/src/: main.rs
cpu_test/src/config/: settings.rs
cpu_test/src/data/: mnist_data.rs
cpu_test/src/processing/: mod.rs  parallell.rs  sequential.rs
cpu_test/src/utils/: file_io.rs  matrix_ops.rs  mod.rs
cuda/: .gitignore  cudaDotProduct.cu
making-filters/: Cargo.toml  build.rs
making-filters/src/: main.rs
plotters_test/: Cargo.toml
plotters_test/files/: mock_dot_product_benchmark_data.csv
plotters_test/src/: main.rs
python/: .gitignore  README.md
python/files/results/: 1000_bilder_2500_filter_CPU_img_1000_1714498141.csv
python/src/: data_loader.py  file_writer.py  image_processing.py  main.py  mnist_related.py  pooling.py
python_modules/: gaussian.py  gaussian_v2.py  make-filters.py  make_filters.py
results/: README.md
results/IDUN/: CPU_img_10-000_50_inc_9200_filter.csv  CPU_img_1000_50_inc_10-000_filter.csv  GPU_10-000_img_gpu-loop_500_inc_53-000_filter.csv
results/IDUN/cpu/: Python_CPU_1000_img_2500_filters_10_inc.csv  platform-2-rust-python-broad.csv  platform-2-rust_cpu-par.csv  platform-2-rust_python.csv  plattform-2-rust-cpu-par.csv  plattform-2-rust_cpu-seq.csv  rust_CPU_SEQ_img_1000_filter_2500_increment_10_1714600668.csv
results/IDUN/cpu-gpu/: platform-2-cpp.csv  platform-2-rust-for-loop-micros.csv  platform-2-rust-gpu-loop.csv  platform-2-rust_cpu-par.csv
results/IDUN/cpu.gpu/: CUDA_GPU_500_img_loop_1_inc_2480_filter.csv  platform-2-cpp-v3-micros.csv  platform-2-rust-cpu-par.csv  platform-2-rust-for-loop.csv
results/IDUN/gpu/: CPP_10-000_img_100-000_filter_500_inc_CMP_GPU.csv  CPP_CUDA_V2_10-000_img_100-000_filter.csv  GPU_10-000_img_gpu-par_500_inc_53-500_filters.csv  GPU_10000_img_gpu-sum_filter_100000_increment_500_1714589506.csv  platform-2-cpp-2.csv  platform-2-cpp-v3.csv  platform-2-cpp.csv  platform-2-rust-sum.csv  platform-2-rust_gpu-loop.csv  platform-2-rust_gpu-par.csv  platform-2-rust_gpu-sum.csv  plattform-2-rust-for-loop-256-size.csv
results/IDUN/opt-gpu-loop/: opt-rust-loop.csv
results/IDUN/par-vs-seq/: platform-2-cosine-loop.csv  platform-2-cosine-par.csv  platform-2-max-loop.csv  platform-2-max-par.csv
results/IDUN/shader-strat/: platform-2-rust-gpu-seq.csv  platform-2-rust_cpu-par.csv  platform-2-rust_gpu-loop.csv  platform-2-rust_gpu-sum.csv  platform-2-rust_gpu.csv  plattform-2-rust-cpu-par.csv  plattform-2-rust-for-loop.csv
results/IDUN/unused-runs/: CPU_500_img_1_inc_1000_filter_CMP_GPU.csv  CPU_img_1000_10_inc_12-920_filter_CMP_PYTHON.csv  platform-2-cpp-otp.csv  platform-2-cpp-v3.csv
results/i7-12700k-RTX3080/: GPU_500_img_gpu-loop_filter_2500_increment_1_1714571713.csv
results/i7-12700k-RTX3080/cos-sim-max/: cosine_time_loop_1715575229.csv  cosine_time_par_1715580566.csv  max_time_loop_1715575229.csv  max_time_par_1715580566.csv
results/i7-12700k-RTX3080/cpu-tester/: cpu-platform-1-rust_cpu-par.csv  edvard_1000_bilder_2500_filter_CPU_seq_img_1000_1714559640.csv  platform-1-python.csv  platform-1-rust-cpu-par.csv  platform-1-rust_cpu-seq.csv  python_CPU_img_1000_1714498141.csv
results/i7-12700k-RTX3080/cpu-vs-gpu/: platform-1-cpp-v3.csv  platform-1-cpp.csv  platform-1-rust-gpu-loop.csv  platform-1-rust_cpu-par.csv
results/i7-12700k-RTX3080/gpu-showdown/: GPU_10000_img_gpu-sum_filter_100000_increment_500_1714572226.csv  cpp_10000_bilder_100000_filter_GPU_img_10000_1714515357.csv  edvard_10000_bilder_53500_filter_GPU_loop_10000_img_gpu-loop_1714555867.csv  platform-1-cpp.csv  platform-1-rust_gpu-loop.csv  platform-1-rust_gpu-par.csv  platform-1-rust_perf-dis.csv  platform-1-sum.csv
results/i7-12700k-RTX3080/shader-strat/: GPU_100_img_gpu-loop_filter_5000_increment_10_1714581086.csv  (+6 more)
rust/: Cargo.toml  README.md
rust/cpu_test/: Cargo.toml
rust/cpu_test/files/: filter.csv  filters.csv  output_sequential.csv
rust/cpu_test/src/: lib.rs
rust/cpu_test/src/config/: settings.rs
rust/cpu_test/src/data/: mnist_data.rs  mod.rs
rust/cpu_test/src/processing/: parallell.rs  sequential.rs
rust/making_filters/: Cargo.toml
rust/making_filters/src/: main.rs
rust/python_modules/: requirements.txt
rust/src/: main.rs  research.rs
rust/wgpu_test/: Cargo.toml
src/: main.rs  research.rs
wgpu_test/: Cargo.toml
wgpu_test/src/: dot_product.wgsl  dot_shader.wgsl  extractor.rs  extraxtor.rs  feature_extraction.wgsl  lib.rs  main.rs  max.wgsl  wgpu_context.rs  wgpu_context_error.rs
wgpu_test/src/shaders/: dot_mult.wgsl  dot_mult_2x_reduce.wgsl  dot_mult_reduction.wgsl  dot_summerize.wgsl  dot_summerize_parallel.wgsl  feature_extraction.wgsl  for_loop.wgsl  for_loop_cosine_similarity.wgsl  for_loop_max_pool.wgsl  parallel_cosine_similarity.wgsl  parallel_dot.wgsl  parallel_max_pool.wgsl  sum_reduction.wgsl
wgpu_test/src/shaders/expired/: dot.wgsl  partial_dot.wgsl  testin_v2.wgsl
wgpu_test/src/shaders/expired/pair/: dot_mult_2x_reduce.wgsl
wgsl/: Cargo.toml
wgsl/src/: errors.rs  lib.rs  main.rs  shader.rs  utils.rs  variabel.rs  wgsl_utils.rs  wgsl_variabel.rs
(+23 files in other folders)
