[package]
name = "parallelization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = [ "cpu_test","wgpu_test"]

[workspace.dependencies]
env_logger = "0.11.0"
log = "0.4.20"
wgpu = "0.19.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
bytemuck = "1.14.1"
flume = "0.11.0"
