[package]
name = "parallelization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = [ "cpu_test", "wgpu_test", "wgsl", "making-filters" ]

[dependencies]
rayon = "1.8.1"
wgsl = { path = "wgsl" }
wgpu_test = { path = "wgpu_test" }
cpu_test = { path = "cpu_test" }

[workspace.dependencies]
array2d = "0.3.2"
image = "0.25.1"
mnist = "0.6.0"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.8.1"
env_logger = "0.11.0"
log = "0.4.20"
wgpu = "0.19.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
bytemuck = "1.14.1"
flume = "0.11.0"