[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
tokio = { workspace = true }
bytemuck = { workspace = true }
flume = { workspace = true }
rayon = "1.10.0"
