[package]
name = "cpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true }
mnist = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
wgpu_test = { path = "../wgpu_test" }
