[package]
name = "making_filters"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = { workspace = true }
image = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.21.2"
features = ["auto-initialize", "extension-module"]
